--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background: rgb(18, 18, 18);
+}
+::-webkit-scrollbar {
+  background: rgb(71, 77, 83);
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(14, 27, 47);
+}
