--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,128 @@
-@tailwind base;@tailwind components;@tailwind utilities;body{background:rgb(29,27,25)}::-webkit-scrollbar{background:rgb(33,25,16)}::-webkit-scrollbar-thumb{background:rgb(71,77,83)}#pic{filter:drop-shadow(2px 6px 12px rgba(100,51,30,.4))}#pic:hover{filter:drop-shadow(2px 6px 12px rgba(132,70,43,.65))}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body {
+  background: rgb(29, 27, 25);
+}
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 4px;
+  background: rgb(37, 30, 22);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(83, 78, 71, 0.793);
+  border-radius: 4px;
+}
+#pic {
+  filter: drop-shadow(2px 6px 12px rgba(100, 51, 30, 0.4));
+}
+#pic:hover {
+  filter: drop-shadow(2px 6px 12px rgba(132, 70, 43, 0.65));
+}
+::selection {
+  background: rgb(208, 62, 9);
+}
+
+/* Headings */
+.markdown-body h1 {
+  font-size: 2.5rem; /* 40px */
+}
+
+.markdown-body h2 {
+  font-size: 2rem; /* 32px */
+}
+
+.markdown-body h3 {
+  font-size: 1.75rem; /* 28px */
+}
+
+.markdown-body h4 {
+  font-size: 1.5rem; /* 24px */
+}
+
+.markdown-body h5 {
+  font-size: 1.25rem; /* 20px */
+}
+
+.markdown-body h6 {
+  font-size: 1rem; /* 16px */
+}
+
+/* Headings */
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4,
+.markdown-body h5,
+.markdown-body h6 {
+  font-weight: 600;
+  line-height: 1.15;
+  color: #fff0e8;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+/* Paragraphs */
+.markdown-body p {
+  margin-bottom: 10px;
+}
+
+/* Links */
+.markdown-body a {
+  @apply text-orange-500;
+  text-decoration: none;
+}
+
+.markdown-body a:hover {
+  text-decoration: underline;
+}
+
+/* Lists */
+.markdown-body ul,
+.markdown-body ol {
+  padding-left: 20px;
+}
+.markdown-body ul li {
+  list-style-type: disc;
+}
+
+/* Blockquotes */
+.markdown-body blockquote {
+  border-left: 4px solid #a0a0a0;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 15px;
+  color: #777;
+}
+
+/* Code blocks */
+.markdown-body pre {
+  background-color: #f5f5f5;
+  border-left: 3px solid #c5c5c5;
+  padding: 10px;
+  overflow-x: auto;
+}
+
+.markdown-body code {
+  background-color: #f5f5f5;
+  padding: 2px 4px;
+  font-size: 90%;
+  border-radius: 3px;
+}
+
+/* Tables */
+.markdown-body table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.markdown-body th,
+.markdown-body td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.markdown-body th {
+  background-color: #f5f5f5;
+}
