--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body {
   filter: drop-shadow(2px 6px 12px rgba(132, 70, 43, 0.65));
 }
 ::selection {
-  background: rgb(208, 62, 9);
+  background: #d03e09;
 }
 
 /* Headings */
