--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* body {
-  background: rgb(29, 27, 25);
-} */
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, Arial, "Trebuchet MS",
+    sans-serif;
+}
 ::-webkit-scrollbar {
   width: 8px;
 }
